src/test/contracts/top_level_patterns/negative/pascaligo/nested_tuple.ligo
const r = ((1n, 1, "H"), (2n, 2, "E"), (3n, 3, "Hello"))
const ((a1, a2, a3), (b1, a2, b3), (c1, c2, c3)) = r